tests/base/parser/bad/cmodule-version-with.scilla
(* zero not 0 *)

scilla_version zero

library TestLib

contract Test
